--- a/templates/Notes/searchNotes.html
+++ b/templates/Notes/searchNotes.html
@@ -45,9 +45,9 @@ color: #00C851;
     {% endfor %}
     {% endif %}
     {% if founds1 or founds11 or founds2 or founds22 %}
-    <div class="card-header">
+    <div class="card-header2">
         <div class="col-xl-12 col-md-12 col-12">
-            <h2 style="color:black;">Results for <i>'<u>{{ srh }}</u>'</i></h2>
+            <h3>Results searched for <i>'<u>{{ srh }}</u>'</i> :</h3>
         </div>
     </div>
     {% endif %}
