--- a/templates/Notes/libraryNotes.html
+++ b/templates/Notes/libraryNotes.html
@@ -10,16 +10,20 @@
                 <div class="row">
                     <div class="col-sm">
                         <h2 style="color: rgb(66, 8, 8);">Notes</h2>
-                      </div>
-                    <div class="col-sm-8 form-inline justify-content-end">
-                    <a href="{% url 'eNotes' %}"><button class="btn btn-warning btn-md" role="button">E-Notes</button></a>
-                        <form method="POST" class="my-0" action="{% url 'searchNotes' %}">{% csrf_token %}
-                           
-                            <input id="searchbox" type="text" class="form-control" name="srh" placeholder="Search Notes"
-                                required="">
-                            <button type="submit" class="btn btn-danger btn-md">Submit</button>
-                        </form>
                     </div>
+                    <a href="{% url 'eNotes' %}"><button class="btn btn-warning btn-md"
+                            role="button">E-Notes</button></a>
+                    <form method="POST" class="my-0" action="{% url 'searchNotes' %}">{% csrf_token %}
+                        <table>
+                            <tr>
+                                <td><input id="searchbox" type="text" class="form-control cl" name="srh"
+                                        placeholder="Search Notes by description or subject" required=""></td>
+                                <td>
+                                    <button type="submit" class="btn btn-danger btn-md">Submit</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </form>
                 </div>
             </div>
         <div class="card widget box box-shadow">
