--- a/templates/accounts/loginAll.html
+++ b/templates/accounts/loginAll.html
@@ -5,18 +5,20 @@
     <head>
         <meta name="google-signin-client_id"
             content="1016598982512-u656rprh5a0f0j1jl0h00eq454kl1sla.apps.googleusercontent.com">
-        <title>Signup</title>
+        <title>Login</title>
+        
         <!--Bootsrap 4 CDN-->
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <!--Fontawesome CDN-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <!--Custom styles-->
         {% load static %}
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
         <link rel="stylesheet" href="{% static 'css/stylesloginCoachingCentre.css' %}" type="text/css">
         <link href="{% static 'assets/css/users/login-2.css' %}" rel="stylesheet" type="text/css" />
     </head>
