--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -17,6 +17,7 @@
             integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <!--Custom styles-->
         {% load static %}
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
         <link rel="stylesheet" href="{% static 'css/stylesloginCoachingCentre.css' %}" type="text/css">
         <link href="{% static 'assets/css/users/login-2.css' %}" rel="stylesheet" type="text/css" />
     </head>
