--- a/templates/courses-2/teaching-type.html
+++ b/templates/courses-2/teaching-type.html
@@ -34,7 +34,7 @@
                 <div class="col">
                     <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
                     <select id="forclass" name='forclass' style="width: 100%;" class="js-example-basic-single form-control"
-                        onchange="selectclass()">
+                        onchange="selectclass()" required>
                         <option class="form-control" selected disabled value="">Select Class</option>
                         {% for i in classes %}
                         <option class="form-control form-control-lg" value="{{ i.0 }}">{{i.0}} </option>
@@ -43,14 +43,14 @@
                 </div>
                 <div class="col">
                     <label for="validationCustom01"><strong>Select Course<span class="red">*</span></strong></label>
-                    <select id="courseName" name="courseName" style="width: 100%" class="js-example-basic-single form-control">
+                    <select id="courseName" name="courseName" style="width: 100%" class="js-example-basic-single form-control" required>
                         <option class="form-control form-control-lg" selected disabled value="">Select Course</option>
                     </select>
                 </div>
                 <div class="col">
                     <label for="validationCustom01"><strong>Teaching Type <span class="red">*</span></strong></label>
-                    <select id="teachingtype" name='teaching' multiple="multiple" style="width: 100%;"
-                        class="js-example-basic-single form-control ">
+                    <select id="teachingtype" multiple="multiple" name='teaching' style="width: 100%;"
+                        class="js-example-basic-single form-control " required>
                         <option value="Online">Online</option>
                         <option value="ClassRoom">Class Room</option>
                         <option value="Home Tutors">Home Tutors</option>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <button type="submit" class="btn btn-primary"> Submit </button>
+                <button type="submit" class="btn btn-primary mt-5"> Submit </button>
             </div>
         </form>
     </div>
@@ -176,8 +176,8 @@
                         <!--Table head-->
                         <tr>
                             <th>Sr No</th>
-                            <th>Course Name</th>
                             <th>Class</th>
+                            <th>Course Name</th>
                             <th>Teaching Type</th>
                             <th>Duration</th>
                             <th>Time Period</th>
@@ -188,8 +188,8 @@
                         {% for i in teach %}
                         <tr id="{{ i.pk }}">
                             <td>{{ forloop.counter }}</td>
-                            <td>{{i.course.courseName}}</td>
                             <td>{{ i.course.forclass }}</td>
+                            <td>{{i.course.courseName}}</td>
                             <td>{{i.teachType}}</td>
                             <td>{{i.duration}}</td>
                             <td>{{i.timePeriod}}</td>
@@ -201,22 +201,6 @@
                                 <a data-toggle="tooltip" title="Archive" class="btn btn-dark" href="{% url 'teachingArchive' i.id %}"><i class="flaticon-delete-fill"
                                     style="font-size:medium;"></i></a>
                             </td>
-                            <!-- <div class="btn-group">
-                                <button type="button" data-toggle="modal" data-target="#edit-{{i.pk}}" href="#edit-{{i.pk}}"
-                                  class="btn btn-secondary btn-sm"><i
-                                    class="flaticon-edit  bg-success p-1 text-white br-6 mb-1"></i>Edit</button>
-                                <button type="button" class="btn btn-secondary btn-sm dropdown-toggle dropdown-toggle-split"
-                                  id="dropdownMenuReference1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                  data-reference="parent">
-                                  <span class="sr-only">Toggle Dropdown</span>
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuReference1">
-                                  <button class="btn btn-secondary btn-sm dropdown-item" data-toggle="modal"
-                                    data-target="#delete-{{i.pk}}" href="#delete-{{i.pk}}" title="Delete"><i
-                                      class="flaticon-delete  bg-danger p-1 text-white br-6 mb-1"></i>Delete</button>
-                                
-                                </div>
-                                </div> -->
                             </td>
                         </tr>
                         {% endfor %}
@@ -241,26 +225,35 @@
         $(document).ready(function()
         {
             $('#teachingtype').on('change', function() {
-              if ( this.value == 'Online')
-              {
-                $("#Online").show();
-                $("#allvalue").show();
-               
-              }
-              else if ( this.value == 'ClassRoom')
-              {
-                $("#Classroom").show();
-                $("#allvalue").show();
+                var selected = [];
+                    for (var option of document.getElementById('teachingtype').options)
+                    {
+                        if (option.selected) {
+                            selected.push(option.value);
+                        }
+                    }
                 
-              }
-              else if( this.value == 'Home Tutors')
-              {
-                $("#hometutors").show();
-                $("#allvalue").show();
-               
-                
-              }
-            });
+                $("#Online").hide();
+                $("#allvalue").hide();
+                $("#Classroom").hide();
+                $("#hometutors").hide();
+
+                for (var i of selected){
+                    if ( i == 'Online')
+                        {
+                            $("#Online").show();
+                        }
+                        else if ( i == 'ClassRoom')
+                        {
+                            $("#Classroom").show();
+                        }
+                        else if( i == 'Home Tutors')
+                        {
+                            $("#hometutors").show();
+                        }
+                    }
+                    $("#allvalue").show();
+                });
         }
         );
     </script>
