--- a/templates/batches/batch-timing.html
+++ b/templates/batches/batch-timing.html
@@ -70,6 +70,7 @@
         </div>
 
 
+
         <div class="col">
           <label for="validationCustom01"><strong>Start Time <span class="red">*</span></strong></label>
           <input required class="form-control" type="time" placeholder="" type="text" name="startTime" required /><br />
@@ -90,7 +91,7 @@
           <label for="validationCustom01"><strong>Select Days <span class="red">*</span></strong></label>
 
           <div>
-            <select required class="form-control  selectpicker multiselect multiple-checkboxes" data-actions-box="true"  multiple="multiple" id="days" name='fordays' required>
+            <select required class="form-control  selectpicker multiselect multiple-checkboxes" data-actions-box="true" id="days" name='fordays' required>
               
               <option value="Sunday">Sunday</option>
               <option value="Monday">Monday</option>
