--- a/templates/courses-2/teaching-type.html
+++ b/templates/courses-2/teaching-type.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col">
                     <label for="validationCustom01"><strong>Teaching Type <span class="red">*</span></strong></label>
-                    <select id="teachingtype" name='teaching' multiple="multiple" style="width: 100%;"
+                    <select id="teachingtype" name='teaching' style="width: 100%;"
                         class="js-example-basic-single form-control ">
                         <option value="Online">Online</option>
                         <option value="ClassRoom">Class Room</option>
