--- a/templates/dashboard/institute-dashboard.html
+++ b/templates/dashboard/institute-dashboard.html
@@ -17,18 +17,18 @@ Institute Dashboard
 {% block notifications %}
 {% if errors %}
 <div class="alert alert-danger" role="alert">
-    <div id='errorsBox'>
-        <div>
-            <h5
-                style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">
-                Error !</h5>
-            <ul>
-                {% for x in errors %}
-                <li>{{ x }}</li>
-                {% endfor %}
-            </ul>
-        </div>
+  <div id='errorsBox'>
+    <div>
+      <h5
+        style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">
+        Error !</h5>
+      <ul>
+        {% for x in errors %}
+        <li>{{ x }}</li>
+        {% endfor %}
+      </ul>
     </div>
+  </div>
 </div>
 {% endif %}
 {% if messages %}
@@ -136,10 +136,10 @@ Institute Dashboard
 
 <style>
   #card {
-      background-color: white;
-      padding-bottom: 3rem;
-      padding-top: 3rem;
-      color: black;
+    background-color: white;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+    color: black;
   }
 </style>
 <div class="mt-4">
@@ -147,41 +147,39 @@ Institute Dashboard
   <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.css' rel='stylesheet' />
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.js'></script>
 
-  <div class="" id="card">
-      <div class="row d-flex justify-content-center">
-          <div class="col-sm-10">
-              <div id='calendar'></div>
-          </div>
+  <div class="container" id="card">
+    <div class="row d-flex justify-content-center">
+      <div class="col-sm-10">
+        <div id='calendar'></div>
       </div>
+    </div>
   </div>
 
   <script>
 
-      document.addEventListener('DOMContentLoaded', function () {
-          var calendarEl = document.getElementById('calendar');
-          var calendar = new FullCalendar.Calendar(calendarEl, {
-              initialView: 'dayGridMonth',
-              headerToolbar: {
-                  left: 'prev,next today',
-                  center: 'title',
-                  right: 'dayGridMonth,timeGridWeek,timeGridDay'
-              },
-              events: [
-
-                  {% for event in events %}
-
-                      {
-                  title: "{{ event.batchName}}",
-                  start: '{{ event.createdAt|date:"Y-m-d" }}',
-                  // start: '{{ event.startTime|time:"H:i" }}',
-                  end: '{{ event.endTime|time:"H:i" }}',
-                  id: '{{ event.id }}',
-              },
-              {% endfor %}
-              ],
+    document.addEventListener('DOMContentLoaded', function () {
+      var calendarEl = document.getElementById('calendar');
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth',
+        headerToolbar: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        },
+        events: [
+          {% for event in events %}
+          {
+          start: '{{ event.createdAt|date:"Y-m-d" }}',
+          title: "{{ event.batchName}}",
+          //start: '{{ event.startTime|time:"H:i" }}',
+          end: '{{ event.endTime|time:"H:i" }}',
+          id: '{{ event.id }}',
+          },
+          {% endfor %}
+        ],
               
       });
-      calendar.render();
+    calendar.render();
     });
 
   </script>
