--- a/templates/courses-2/archive-courses.html
+++ b/templates/courses-2/archive-courses.html
@@ -106,7 +106,7 @@ Institute Dashboard
             {% if course %}
           <div class="widget-content widget-content-area">
             <div class="table-responsive">
-              <table class="table table-bordered table-hover table-striped mb-4">
+              <table class="table table-bordered table-striped mb-4">
                   <tr>
                     <th class="">Sr No</th>
                     <th class="">Class</th>
@@ -123,7 +123,7 @@ Institute Dashboard
                       <a data-toggle="tooltip" title="Delete" class="btn btn-danger"  href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
                           style="font-size:medium;"></i></a>
                       <a data-toggle="tooltip" title="Unarchive" class="btn btn-success" href="{% url 'course-unarchive' i.id %}"><i class="flaticon-log-4"
-                                    style="font-size:medium; transform: rotate(90deg);"></i></a>
+                        style="font-size:medium; transform: rotate(180deg);"></i></a>
                     </td>
 
                     <!-- <td class="text-center">
