--- a/templates/courses-2/courses.html
+++ b/templates/courses-2/courses.html
@@ -130,7 +130,7 @@
                                 style="font-size:medium;"></i></a>
                             <a data-toggle="tooltip" title="Delete" class="btn btn-danger" href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
                                 style="font-size:medium;"></i></a>
-                            <a data-toggle="tooltip" title="Archive" class="btn btn-dark" href="{% url 'courseArchivefirst' i.id %}"><i class="flaticon-delete-fill"
+                            <a data-toggle="tooltip" title="Archive" class="btn btn-dark" href="{% url 'courseArchivefirst' i.id %}"><i class="flaticon-log-4"
                                 style="font-size:medium;"></i></a>
                         </td>
                     </tr>
