--- a/templates/fees/viewFees.html
+++ b/templates/fees/viewFees.html
@@ -280,7 +280,7 @@
                             style="font-size:medium;"></i></a>
                         <a class="btn btn-danger" href="{% url 'deleteFee' fee.id %}"><i class="flaticon-delete-fill"
                             style="font-size:medium;"></i></a>
-                        <a class="btn btn-dark" href="{% url 'archiveFeefirst' fee.id %}"><i class="flaticon-delete-fill"
+                        <a class="btn btn-dark" href="{% url 'archiveFeefirst' fee.id %}"><i class="flaticon-log-4"
                             style="font-size:medium;"></i></a>
                         
                     </td>                    
