--- a/templates/students/postAssignment.html
+++ b/templates/students/postAssignment.html
@@ -125,14 +125,14 @@
                             {% endif %}
                             <td class="text-center"><a href="{% url 'Delete_Assignment' assing.sno %}"><span
                                         class="btn btn-danger flaticon-delete-4"></span></a></td>
-                            <td class="text-center"><button type="button" data-toggle="modal" data-target="#tutorModal{{assing.sno}}"
+                            <td class="text-center"><button type="button" data-toggle="modal" data-target="#viewModal{{assing.sno}}"
                                     class="btn btn-info">View</button></td>
-                            <td class="text-center"><a href="">
-                                <span class="btn btn-success">Extend</span></a></td>
+                            <td class="text-center"><button type="button" data-toggle="modal" data-target="#extendModal{{assing.sno}}"
+                                class="btn btn-success">Extend</button></td>
                         </tr>
 
                         <!-- view box -->
-                        <div class="modal fade" id="tutorModal{{assing.sno}}" tabindex="-1" role="dialog"
+                        <div class="modal fade" id="viewModal{{assing.sno}}" tabindex="-1" role="dialog"
                             aria-labelledby="{{assing.sno}}" aria-hidden="true" style="top:30%; color: black;">
                             <div class="modal-dialog modal-lg align-item-center" role="document">
                                 <div class="modal-content">
@@ -166,6 +166,35 @@
                                                         {{assing.budget}}
                                                     </span>
                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br>
+                            </div>
+                        </div>
+                        <!-- view box -->
+
+                        <!-- extend box -->
+                        <div class="modal fade" id="extendModal{{assing.sno}}" tabindex="-1" role="dialog"
+                            aria-labelledby="{{assing.sno}}" aria-hidden="true" style="top:30%; color: black;">
+                            <div class="modal-dialog modal-lg align-item-center" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="col-sm-12 text-center" id="{{assing.sno}}">
+                                            Extend Deadline</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="col-md-12">
+                                            <div class="row">
+                                                <form action="{% url 'extend' assing.sno %}" method="POST">
+                                                    {% csrf_token %}
+                                                <div class="col-lg-12 col-12 col-md-12 input-group form-group">
+                                                    <label class="control-label col-sm-4 col-5 mt-2" style="color:black;">Deadline</label>
+                                                    <input type="date" class="form-control w-100 col-sm-8 col-7" value='{{ assing.deadline|date:"Y-m-d" }}' name="extend" required>
+                                                </div>
+                                                <input type="submit" value="Submit" class="btn btn-info" style="margin: auto;">
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
